@@ -55,6 +55,7 @@ Bugfixes:
 - mp3 files containing images can be played back (Jira APPSERVER-47)
 - fixed parsing of long strings (Jira APPSERVER-44)
 - fixed pausing and seeking audio-only flv files (Jira SN-17)
+- number of streams is no longer limited (Jira SN-14)
 
 
 Red5 0.6rc1 (2006-10-30)
